--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase
+name: Deploy Functions
 
 on:
   push:
@@ -6,19 +6,20 @@ on:
       - main
 
 jobs:
-  deploy:
+  deploy_functions:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
-      
+        uses: actions/checkout@v3  # Update to the latest version that supports Node.js 20
+
       - name: Set Up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # Update to the latest version that supports Node.js 20
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Deploy Functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: firebase deploy --only functions --token $FIREBASE_TOKEN
+
