--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^4.9.0",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "18"
   }
 }
