--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
         uses: actions/setup-node@v4  # Update to the latest version that supports Node.js 20
         with:
           node-version: '20'
-          
+
+      - name: Install Dependencies
+        run: npm install
+      
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
