--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,6 @@ jobs:
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           ADMIN_ID: ${{ secrets.ADMIN_ID }}
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: firebase deploy --only functions --token $FIREBASE_TOKEN
 
