--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
+    "google-auth-library": "^9.10.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
   },
