--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Deploy Functions
         env:
           DATABASE_ACCESS: ${{ secrets.DATABASE_ACCESS }}
-          GOOGLE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
